@@ -1,6 +1,7 @@
 2020-03-27 Wiley E. Hill <wileyhill@gmail.com>
 
-    * src/iface/i_menu.c: Update function documentation.
+    * src/iface/i_menu.c: Update function documentation, add function
+      geda_iface_menu_return_tooltip.
 
 2020-03-17 Wiley E. Hill <wileyhill@gmail.com>
 
